--- a/ingles/english_practice_exam.html
+++ b/ingles/english_practice_exam.html
@@ -6,7 +6,7 @@
     <title>English Practice Test - Second Grade</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive;
+            font-family: Arial;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             margin: 0;
             padding: 20px;
