--- a/science/dwarf_planets_interactive.html
+++ b/science/dwarf_planets_interactive.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dwarf Planets Learning</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,7 +15,9 @@
         }
         
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: "Comic Neue", cursive;
+            font-weight: 400;
+  			font-style: normal;
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #000428 100%);
             min-height: 100vh;
             color: white;
