--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Listado de Prácticas</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; }
-    h1 { margin-bottom: 1rem; }
-    h2 { margin-top: 1.5rem; font-size: 1.2rem; }
-    ul { margin: .25rem 0 1rem 1.5rem; }
-    a { text-decoration: none; color: #0066cc; }
-    a:hover { text-decoration: underline; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 2rem;
+    }
+
+    h1 {
+      margin-bottom: 1rem;
+    }
+
+    h2 {
+      margin-top: 1.5rem;
+      font-size: 1.2rem;
+    }
+
+    ul {
+      margin: .25rem 0 1rem 1.5rem;
+    }
+
+    a {
+      text-decoration: none;
+      color: #0066cc;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
+
 <body>
   <h1>Listado de Prácticas</h1>
 
@@ -29,6 +51,13 @@
       <li><a href="matematicas/practica2.html">Práctica 2</a></li>
     </ul>
   </div>
+  <div class="folder">
+    <h2>Español</h2>
+    <ul>
+      <li><a href="espanol/3ertrimetre.html">Practica examen final</a></a></li>
+    </ul>
+  </div>
 
 </body>
+
 </html>
