--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     <ul>
       <li><a href="espanol/3ertrimetre.html">Practica examen final</a></a></li>
     </ul>
+    <h2>Science</h2>
+    <ul>
+      <li><a href="Science/science_quiz-3er-trimestre.html">Practica examen final</a></a></li>
+    </ul>
   </div>
 
 </body>
